:green_heart: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 *.o
 *.gc*
-cscope.*
 gwion
 include/generated.h
-util/generate_header
-util/coverity_scan.sh
+utils/generate_header
+utils/coverity_scan.sh
 Makefile
-eval/parser.output
-eval/parser.xml
