:wrench: more Better Code Hub

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -5,7 +5,7 @@ languages:
     production:
       include:
         - .*/src/.*\.c
-        - .*/driver/.*\.c
+        - .*/src/drvr/.c
     test:
       include:
         - .*/examples/.*\.gw
