:art: emit_exp_decl

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -5,7 +5,7 @@ languages:
     production:
       include:
         - .*/src/.*\.c
-        - .*/src/drvr/.c
+        - .*/src/drvr\.c
     test:
       include:
         - .*/examples/.*\.gw
