:wrench: Update BCH, again

--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -15,12 +15,14 @@ languages:
         - .*/tests/plugins/.*\.c
 
   - name: java
+    production:
     test:
       include:
         - .*/examples/.*\.gw
         - .*/tests/.*/.*\.gw
 
   - name: script
+	production:
     test:
       include:
       - .*/utils/.*\.sh
