--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -20,6 +20,7 @@ languages:
     test:
       include:
         - /examples/.*\.gw
+        - /examples/.*/.*\.gw
         - /tests/.*/.*\.gw
 
   - name: script
