--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@ gwlint
 gwtag
 gwcov
 gwdbg
+gwdot
 .d
 *.gw.lint
 *.gw.tag
 *.gwcov
 *.gwda
+gwmon.out
 config.mk
 include/generated.h
 utils/generate_header
