--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,10 @@ cache:
 
 env:
   global:
-    - ALSA_D=0
     - SOUNDPIPE_LIB=$TRAVIS_BUILD_DIR/Soundpipe/libsoundpipe.a
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - GWION_ADD_DIR=$TRAVIS_BUILD_DIR/add
-    - USE_MEMCHECK=1
-    - USE_GWCOV=1
     - PREFIX=$TRAVIS_BUILD_DIR
   matrix:
     - USE_DOUBLE=1 SP_BRANCH=dev
@@ -42,10 +39,12 @@ compiler:
 install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi
 
-
 before_script:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then export USE_COVERAGE=1; fi
   - bash utils/travis_prepare.sh
+
+script:
+  - make && make test
 
 after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then bash utils/lcov_helper.sh; fi
