:wrench: Fix a bit build system. again

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
   global:
     - SOUNDPIPE_LIB=$TRAVIS_BUILD_DIR/Soundpipe/libsoundpipe.a
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
+    - CFLAGS=$SOUNDPIPE_INC
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - GWION_ADD_DIR=$TRAVIS_BUILD_DIR/add
     - PREFIX=$TRAVIS_BUILD_DIR
