--- a/.travis.yml
+++ b/.travis.yml
@@ -9,24 +9,16 @@ addons:
   apt:
     packages:
     - valgrind
-    - libsndfile1-dev
     - lcov
-
-cache:
-  directories:
-    - Soundpipe
 
 env:
   global:
-    - SOUNDPIPE_LIB=$TRAVIS_BUILD_DIR/Soundpipe/libsoundpipe.a
-    - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
-    - CFLAGS=-I$SOUNDPIPE_INC -Wno-attributes
-    - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
+    - CFLAGS=-Wno-attributes
     - GWION_ADD_DIR=$TRAVIS_BUILD_DIR/add
     - PREFIX=$TRAVIS_BUILD_DIR
   matrix:
-    - USE_DOUBLE=1 SP_BRANCH=dev
-    - USE_DOUBLE=0 SP_BRANCH=dev
+    - USE_DOUBLE=1
+    - USE_DOUBLE=0
 
 matrix:
   fast_finish: true
