--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "plug"]
 	path = plug
 	url = https://github.com/fennecdjay/Gwion-plug
+[submodule "gwion-jit"]
+	path = gwion-jit
+	url = https://github.com/fennecdjay/gwion-jit.git
