--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "gwion-jit"]
 	path = gwion-jit
 	url = https://github.com/fennecdjay/gwion-jit.git
+[submodule "jit"]
+	path = jit
+	url = https://github.com/fennecdjay/gwion-jit.git
