--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "jit"]
 	path = jit
 	url = https://github.com/fennecdjay/gwion-jit.git
+[submodule "tools"]
+	path = tools
+	url = https://github.com/fennecdjay/gwion-tools.git
