:fire: Add mod submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "tools"]
 	path = tools
 	url = https://github.com/fennecdjay/gwion-tools.git
+[submodule "mod"]
+	path = mod
+	url = https://github.com/fennecdjay/gwion-mod.git
