--- a/.travis.yml
+++ b/.travis.yml
@@ -36,10 +36,13 @@ install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi
 
 before_script:
+  - git submodule init https://github.com/fennecdjay/gwion-util/
+  - git submodule update
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then export USE_COVERAGE=1; fi
   - mkdir -p "$GWION_ADD_DIR"
   - mkdir -p "$GWION_TEST_DIR"
   - [ $(uname) = Linux ] || brew update
+
 script:
   - make && make test
 
