:wrench: Test clang only bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then bash help/lcov.sh; fi
 
 after_failure:
-  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.5  ]; then valgrind ./gwion; fi
+  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.5  ]; then valgrind ./gwion examples/func_ptr.gw; fi
 
 git:
   submodules: false
