--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
 before_script:
   - git submodule update --init util
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then export USE_COVERAGE=1; fi
+  - export CC=gcc-8
   - mkdir -p "$GWION_ADD_DIR"
   - mkdir -p "$GWION_TEST_DIR"
   - if [ $(uname) != Linux ]; then brew update; fi
