--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ compiler:
   - clang
 
 install:
-  - if [ $(uname) = Linux ] && [ $CC = gcc ]; then export CC=gcc-4.8; fi
+  - if [ $(uname) = Linux ]; then if [ $CC = gcc ]; then export CC=gcc-4.8; fi; fi
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi
 
 before_script:
