--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - lvm-toolchain-trusty-7.0
+    - llvm-toolchain-trusty-7.0
     packages:
     - valgrind
     - lcov
