--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,12 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-trusty-7.0
+    - llvm-toolchain-trusty-6.0
     packages:
     - valgrind
     - lcov
     - gcc-8
-    - clang-7.0
+    - clang-6.0
 
 env:
   global:
@@ -35,7 +35,18 @@ matrix:
 
 compiler:
   - gcc
+  addons:
+    apt:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-trusty-6.0
+      packages:
+      - gcc-8
   - clang
+  addons:
+    sources:
+    - llvm-toolchain-trusty-6.0
+    packages:
+    - clang-6.0
 
 install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi
