--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 	path = util
 	url = https://github.com/fennecdjay/gwion-util
   active = true
+[submodule "ast"]
+	path = ast
+	url = https://github.com/fennecdjay/gwion-ast
