--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install:
 before_script:
   - if [ $(uname) = Linux ]; then if [ $CC = gcc ]; then export CC=gcc-8; fi; fi
   - if [ $(uname) = Linux ]; then if [ $CC = clang ]; then export CC=clang-6.0; fi; fi
-  - git submodule update --init util
+  - git submodule update --init util ast
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then export USE_COVERAGE=1; fi
   - mkdir -p "$GWION_ADD_DIR"
   - mkdir -p "$GWION_TEST_DIR"
