--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ addons:
   apt:
     sources:
     - ubuntu-toolchain-r-test
-    - llvm-toolchain-trusty-6.0
+#    - llvm-toolchain-trusty-6.0
     packages:
     - valgrind
     - lcov
     - gcc-8
-    - clang-6.0
+#    - clang-6.0
 env:
   global:
   - CC_TEST_REPORTER_ID=1ef7168aff2b8902922b345c8b1b9be3fd2442fa4f2096634b42235bcbaa2c47
@@ -49,7 +49,7 @@ install:
 before_script:
   - if [ $(uname) = Linux ]; then
       if [ $CC = gcc ]; then export CC=gcc-8;
-      elif [ $CC = clang ]; then export CC=clang-6.0;
+#      elif [ $CC = clang ]; then export CC=clang-6.0;
       fi;
     fi;
   - git submodule update --init util ast
