--- a/.bettercodehub.yml
+++ b/.bettercodehub.yml
@@ -8,7 +8,7 @@ languages:
       exclude:
         - /src/drvr/.*\.c
         - /src/vm/vm.c
-        - include/.*\.h
+        - /include/.*\.h
     test:
       include:
         - /tests/test_plugins/.*\.c
