--- a/.travis.yml
+++ b/.travis.yml
@@ -37,14 +37,16 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
+    - os: windows
+  allow_failures:
    - os: 
      - osx
      - windows
-   - compiler: clang
+#   - compiler: clang
 
 compiler:
   - gcc
-  - clang
+#  - clang
 
 install:
 - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi
@@ -54,6 +56,10 @@ before_script:
       if [ $CC = gcc ]; then export CC=gcc-8;
       elif [ $CC = clang ]; then export CC=clang-7;
       fi;
+    else if [ $(uname) = "Darwin" ]; then brew update; fi;
+    else choco install make;
+      alias gcc=gcc.exe;
+      export CC="gcc.exe";
     fi;
   - git submodule update --init util ast
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then
@@ -63,14 +69,6 @@ before_script:
     ./cc-test-reporter before-build;
     fi;
   - mkdir -p "$GWION_ADD_DIR" "$GWION_TEST_DIR"
-  - if [ $(uname) = "Darwin" ];
-    then brew update; 
-    else if [ $(uname) != "Linux" ];
-        then choco install make;
-        alias gcc=gcc.exe;
-        export CC="gcc.exe";
-      fi;
-    fi;
 
 script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
