--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,8 @@ before_script:
       elif [ $CC = clang ]; then export CC=clang-7;
      fi;
     elif [ $(uname) = "Darwin" ]; then brew update;
-#    else choco install make;
     fi;
+#    else choco install make;
 
 #  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then
 #      export USE_COVERAGE=1;
@@ -73,6 +73,7 @@ script:
   - if [ $(uname) = "Linux" ] || [ $(uname) = "Darwin" ];
     then make && make test;
     else
+      choco install make
       export CFLAGS+=-DBUILD_ON_WINDOWS;
       make.exe && make.exe test;
     fi;
