--- a/.travis.yml
+++ b/.travis.yml
@@ -74,10 +74,9 @@ script:
     then make && make test;
     else
       choco install make;
-      export CFLAGS+=-DBUILD_ON_WINDOWS;
+      export BUILD_ON_WINDOWS=1
       make.exe && make.exe test;
     fi;
-#      choco install make
 
 after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then
