--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ script:
     then make && make test;
     else
       choco install make;
-      export BUILD_ON_WINDOWS=1
+      export BUILD_ON_WINDOWS=1;
       make.exe && make.exe test;
     fi;
 
