:wrench: Travis win

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,14 +48,10 @@ compiler:
 #  - clang
 install:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then gem install coveralls-lcov; fi;
-  - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ];
-    then choco install make;
-    choco install make;
-    export BUILD_ON_WINDOWS=1;
-    git clone https://github.com/dlfcn-win32/dlfcn-win32;
-    cd dlfcn-win32;
-    make.exe;
-    cd ..;
+  - if [ $(uname) != "Linux" ] && [ $(uname) != "Darwin" ]; then 
+      choco install make;
+      export BUILD_ON_WINDOWS=1;
+      git clone https://github.com/dlfcn-win32/dlfcn-win32 && cd dlfcn-win32 && make.exe;
     fi;
 
 before_script:
